--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+#pliki srodowiskowe
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+!.env.example
